Update for running first batch

--- a/script.ipynb
+++ b/script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,19 @@
     "\n",
     "\"\"\"\n",
     "Written for MBA Love is Blind. Script to generate dating matching.\n",
+    "\n",
+    "May 16 Update:\n",
+    "1. Fix bug in output list - showing interest.\n",
+    "2. Add .edu email as emailee.\n",
+    "3. Output Master match list using anonymous email. Separate master match list for the new batch. Include match both directions.\n",
+    "4. Two MIN_MATCH thresholds, one for heterosexual group the other for homosexual group.\n",
     "\"\"\"\n",
     "\n",
     "from random import randrange, choice\n",
     "import pandas as pd\n",
     "\n",
     "__author__ = \"Huey Huilong Han\"\n",
-    "__date__ = \"Last Update: May 14, 2020.\"\n",
+    "__date__ = \"Last Update: May 16, 2020.\"\n",
     "\n",
     "###### load data and basic cleaning #####\n",
     "# read in data\n",
@@ -52,7 +58,7 @@
     "                        \"Phoenix / Scottsdale\": \"Phoenix\", \"Colorado\": \"Denver\", \"Washington DC\": \"Washington\",\n",
     "                        \"Washington, DC\": \"Washington\",\n",
     "                        \"London\": \"New York\", \"Toronto\": \"New York\", \"China\": \"New York\", \"Tokyo\": \"New York\",\n",
-    "                        \"Sydney, Australia\": \"New York\"}, inplace=True)\n",
+    "                        \"Sydney, Australia\": \"New York\", \"Dallas \": \"Dallas\"}, inplace=True)\n",
     "\n",
     "unfound_cities = []\n",
     "for x in df.target_city.unique():\n",
@@ -65,7 +71,12 @@
     "### clustering based on locations\n",
     "# define hub city\n",
     "# TODO: in the future, automate hub selection\n",
-    "HUBS = {\"New York\": None, \"San Francisco\": None, \"Chicago\": None} # using these locations to approximate east, west and central\n",
+    "# HUBS = {\"New York\": None, \"San Francisco\": None, \"Chicago\": None} # using these locations to approximate east, west and central\n",
+    "HUBS = {\"New York\": None, \"San Francisco\": None,\n",
+    "        \"Chicago\": None, \"Los Angeles\": None,\n",
+    "        \"Seattle\": None, \"Boston\": None}\n",
+    "\n",
+    "\n",
     "\n",
     "# get coordinates\n",
     "for k in HUBS:\n",
@@ -227,7 +238,7 @@
     "\n",
     "# define min number of matches for every person\n",
     "HETERO_MIN_MATCH = 2 # NOTE: this is a parameter defined by user\n",
-    "HOMO_MIN_MATCH = 2 # NOTE: this is a parameter defined by user\n",
+    "HOMO_MIN_MATCH = 3 # NOTE: this is a parameter defined by user\n",
     "\n",
     "\n",
     "# initialize matched_group\n",
@@ -348,9 +359,13 @@
     "output_df.columns = columns\n",
     "output_df.index.set_names(\"emailee\", inplace=True)\n",
     "\n",
+    "# output intermediate list for debugging purposes\n",
+    "output_df.to_csv(\"debugging_output.csv\")\n",
+    "\n",
+    "\n",
     "# output master match df\n",
     "DATE = '2020-05-16'\n",
-    "ROUND = 'Round X'\n",
+    "ROUND = 'Round 8'\n",
     "\n",
     "master_match_df = {}\n",
     "master_match_df['To'] = []\n",
@@ -362,7 +377,7 @@
     "    master_match_df['From']+= match_list\n",
     "    master_match_df['To']+=[index for _ in range(len(match_list))]\n",
     "    master_match_df['Date'] = DATE\n",
-    "    master_match_df['Round'] = ROUND    \n",
+    "    master_match_df['Round'] = ROUND\n",
     "pd.DataFrame(master_match_df).to_csv(\"master_match_new_batch.csv\", index=False)\n",
     "\n",
     "\n",
@@ -373,6 +388,7 @@
     "tmp = tmp.dropna(how='all', axis=1)\n",
     "tmp.columns = [\"personal_email\", \"anon_email\", \"gender\", \"interested_gender\", \"business_school\", \"year\", \"target_city\", \"interest\", \"age\"]\n",
     "tmp = tmp.drop_duplicates(subset='anon_email', keep=\"last\")\n",
+    "tmp.fillna(\"\", inplace=True)\n",
     "\n",
     "# anon email replacement\n",
     "emailee_replacement = tmp[[\"anon_email\", \"personal_email\"]].set_index(\"anon_email\")\n",
@@ -391,76 +407,6 @@
     "###### writing to disk #####\n",
     "output_df.to_csv(\"output.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
